# bitacora-printer

./: .gitignore  README.md  config.py  main.py  pyproject.toml  streamdeck_run.ps1
designs/: bitacora_diaria.afdesign  bitacora_journal.afdesign  bitacora_journal_small.afdesign  diario_emocional_template.afdesign
src/: ai_prompts.py  cli_processor.py  data_processor.py  image_processor.py  page_processor.py  task_processor.py  ticktick_api.py
src/data/: active_task_model.py
