[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bitacora_printer"
version = "0.0.1"
description = "Script that generates daily and monk mode bitacoras."
authors = ["Angelo Mosquera <anggelomos@outlook.com>"]
maintainers = ["Angelo Mosquera <anggelomos@outlook.com>"]
readme = "README.md"
homepage = "https://github.com/anggelomos/bitacora-printer"
classifiers = [
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.10"
pillow = "*"
python-dateutil = "*"
tickthon = "*"
python-weather = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
twine = "*"
flake8 = "*"
mypy = "*"
types-requests = "*"

[tool.poetry.urls]
repository = "https://github.com/anggelomos/bitacora-printer"